# embryoBiopsy3D

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  biopsy.py  lineage_simulator.py  pyproject.toml  rebiopsy.py  requirements.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  python-package.yml  summary.yml
app/: streamlit_app.py
embryobiopsy3d/: __init__.py  biopsy.py  cli.py  inference.py  lineage_simulator.py  rebiopsy.py  trials.py
embryobiopsy3d/visualization/: __init__.py  plotly_views.py  scene.py
src/embryo_biopsy_3d/: __init__.py  biopsy.py  lineage_simulator.py  rebiopsy.py
test/: test_bottom_up_positioning.py  test_lineage.py  test_lineage_simulator.py  test_rebiopsy.py  test_sampling.py
tests/: test_bottom_up_positioning.py  test_cli.py  test_lineage.py  test_lineage_simulator.py  test_plotly_views.py  test_rebiopsy.py  test_sampling.py  test_trials.py  test_visualization_scene.py
