[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embryo-biopsy-3d"
version = "0.1.0"
authors = [
    { name = "Angela Yang" },
    { name = "Arjun Biddanda" },
]
description = "Lineage and spatial placement utilities for embryo simulation"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
