[build-system]
requires = [
    "setuptools>=70",
    "wheel",
    "scipy",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "embryo-biopsy-3d"
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3"]
description = "Lineage and spatial placement utilities for embryo simulation"
keywords = ["admixture", "introgression"]
authors = [
    { name = "Angela Yang" },
    { name = "Arjun Biddanda" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
version = "0.1.0"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
authors = [{name="Angela Yang", email="qyang40@jhu.edu"}, {name = "Arjun Biddanda", email = "abiddan1@jhu.edu"}]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/YNemokun/embryoBiopsy3D"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pytest-xdist"]

# [project.scripts]
# trace-extract= "tracehmm.extract_cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.dynamic.version]
attr = "embryobiopsy3d.__version__"
