[build-system]
requires = [
    "setuptools>=70",
    "wheel",
    "scipy",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "embryo-biopsy-3d"
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Science/Research", "Programming Language :: Python :: 3"]
description = "Lineage and spatial placement utilities for embryo simulation"
keywords = ["admixture", "introgression"]
authors = [
    { name = "Angela Yang", email = "qyang40@jhu.edu" },
    { name = "Arjun Biddanda", email = "abiddan1@jhu.edu" },
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist",
]
viz = [
    "pandas>=2.0",
    "plotly>=5.0",
    "streamlit>=1.30",
]

[project.urls]
Homepage = "https://github.com/YNemokun/embryoBiopsy3D"

# [project.scripts]
# trace-extract= "tracehmm.extract_cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.dynamic.version]
attr = "embryobiopsy3d.__version__"
